[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["kassiebradshaw <kassie.r.bradshaw@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.1"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
